# gradecoin

./: .gitignore  Cargo.toml  LICENSE  README.md  REFERENCE.md  TODO.md  config.yaml  log.conf.yml  testnet.yaml
.github/workflows/: rust.yml
examples/: mining.rs  serdeser.rs
public/: index.html  robots.txt  search_index.en.js  sitemap.xml
public/block-docs/: index.html
public/jwt/: index.html
public/transaction-docs/: index.html
site/: config.toml
site/content/: JWT.md  _index.md  block_docs.md  fingerprint_docs.md  misc_docs.md  register_docs.md  test_page.md  transaction_docs.md
site/public/: index.html  robots.txt  search_index.en.js  site.css  sitemap.xml
site/public/block-docs/: index.html
site/public/jwt/: index.html
site/public/misc-docs/: index.html
site/public/register-docs/: index.html
site/public/transaction-docs/: index.html
site/static/: site.css
site/templates/: _variables.html  index.html
site/templates/shortcodes/: exp.html  tidbit.html
src/: block.rs  config.rs  custom_filters.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  routes.rs  schema.rs  student.rs  validators.rs
templates/: css.html  header.html  list.html  menu.html
tests/: route_tests.rs  schema_tests.rs
