[package]
name = "gradecoin"
version = "0.1.0"
authors = ["Yigit Sever <yigit@ceng.metu.edu.tr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.0"
tokio = { version = "0.2.9", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"

[dev-dependencies]
serde_json = "1.0.44"
serde_test = "1.0.104"
