[package]
name = "gradecoin"
version = "0.1.0"
authors = ["Yigit Sever <yigit@ceng.metu.edu.tr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.0"
tokio = { version = "0.2.9", features = ["macros"] }
serde = { version = "1.0.104", features = ["derive"] }
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4.8"
pretty_env_logger = "0.3.1"
parking_lot = "0.10.0"
serde_json = "1.0.59"
lazy_static = "1.4.0"
blake2 = "0.9.1"
hex-literal = "0.3.1"
jsonwebtoken = "7.2.0"
md-5 = "0.9.1"
rsa = "0.4.0"
base64 = "0.13.0"
sha2 = "0.9.3"

[dev-dependencies]
serde_test = "1.0.117"
